added the link to the meet up page

--- a/meetups/2012-06-07-16:30-dutch-android-open-space.textile
+++ b/meetups/2012-06-07-16:30-dutch-android-open-space.textile
@@ -6,7 +6,7 @@ group: meetup
 
 
 
-!{width:100%}images/Dutch-Android-Open-Space-1.png!
+!{width:100%}images/Dutch-Android-Open-Space-1.png!:http://www.dutchaug.org/events/63236452/
 
 h2. _Theme: "Together we can build awesome apps!"_
 
