--- a/meetups/2012-06-07-16:30-dutch-android-open-space.textile
+++ b/meetups/2012-06-07-16:30-dutch-android-open-space.textile
@@ -19,3 +19,4 @@ We are very excited to announce that no one less than Google Android Developer A
 
 *_We hope to see you all on June 7th!_*
 
+"register here":http://www.dutchaug.org/events/63236452/
